--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -53,7 +53,7 @@
 
 <!-- ************* SLIDER ***************** -->
 
-   <div class="custom-slider-main ">
+   <!-- <div class="custom-slider-main ">
       <div class="marquee-content">
       <div class="icon">
          <img src="./assets/images/home/logo2.svg" alt="Client Logo">
@@ -86,16 +86,79 @@
          <img src="./assets/images/home/logo10.svg" alt="Client Logo">
       </div> 
    </div>
-   </div>
+   </div> -->
 
    <!-- ************* SLIDER ***************** -->
   
 
 
-    <!-- ************* SLIDER ***************** -->
+    <!-- ************* SLIDER2 ***************** -->
+     <div class="slider">
+      <div class="container">
+      <div class="slide-track">
+         <div class="slide">
+            <img src="./assets/images/home/logo2.svg" alt="Client Logo">
+         </div>
+         <div class="slide">
+            <img src="./assets/images/home/logo4.svg" alt="Client Logo">
+         </div>
+         <div class="slide">
+            <img src="./assets/images/home/logo5.svg" alt="Client Logo">
+         </div>
+         <div class="slide">
+            <img src="./assets/images/home/logo6.svg" alt="Client Logo">
+         </div>
+         <div class="slide">
+            <img src="./assets/images/home/logo3.svg" alt="Client Logo">
+         </div>
+         <div class="slide">
+            <img src="./assets/images/home/logo1.svg" alt="Client Logo">
+         </div>
+         <div class="slide">
+            <img src="./assets/images/home/logo7.svg" alt="Client Logo">
+         </div>
+         <div class="slide">
+            <img src="./assets/images/home/logo8.svg" alt="Client Logo">
+         </div>
+         <div class="slide">
+            <img src="./assets/images/home/logo9.svg" alt="Client Logo">
+         </div>
+         <div class="slide">
+            <img src="./assets/images/home/logo10.svg" alt="Client Logo">
+         </div>
 
-
-
+            <div class="slide">
+               <img src="./assets/images/home/logo2.svg" alt="Client Logo">
+            </div>
+            <div class="slide">
+               <img src="./assets/images/home/logo4.svg" alt="Client Logo">
+            </div>
+            <div class="slide">
+               <img src="./assets/images/home/logo5.svg" alt="Client Logo">
+            </div>
+            <div class="slide">
+               <img src="./assets/images/home/logo6.svg" alt="Client Logo">
+            </div>
+            <div class="slide">
+               <img src="./assets/images/home/logo3.svg" alt="Client Logo">
+            </div>
+            <div class="slide">
+               <img src="./assets/images/home/logo1.svg" alt="Client Logo">
+            </div>
+            <div class="slide">
+               <img src="./assets/images/home/logo7.svg" alt="Client Logo">
+            </div>
+            <div class="slide">
+               <img src="./assets/images/home/logo8.svg" alt="Client Logo">
+            </div>
+            <div class="slide">
+               <img src="./assets/images/home/logo9.svg" alt="Client Logo">
+            </div>
+            <div class="slide">
+               <img src="./assets/images/home/logo10.svg" alt="Client Logo">    
+      </div>
+      </div>
+    </div>
    <div class="cater">
       <div class="container">
          <div class="row">
