--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
                 <div class="col-md-7">
                 <h2 routerLink="/">CONSULTING<br>SERVICES</h2>
                 </div> -->
-                <img src="./assets/images/UDnew.svg" routerLink="/" alt="Logo">
+                <img src="./assets/images/UDnew3.png" routerLink="/" alt="Logo">
             </div>
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
