--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -313,8 +313,9 @@ header{
     flex-wrap: nowrap;
     cursor: pointer;
     img{
-    width: 50%;
+    width: 27%;
     margin-left: 30px;
+    padding-top: 10px;
     }
 }
 .ux-logo{
